Changes in index.html

--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
+      <h1>Atharv Changes</h1>
     <!-- Content of your website or application -->
     <!-- Bundled JavaScript file -->
     <script src="js/bundle.js"></script>
